WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313476
Bounding box does not account for skinning transforms
https://bugs.webkit.org/show_bug.cgi?id=313476
Summary
Bounding box does not account for skinning transforms
Mike Wyrzykowski
Reported
2026-04-27 13:39:29 PDT
rdar://174193414
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2026-04-27 14:02:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63735
EWS
Comment 2
2026-05-22 19:29:20 PDT
Committed
313775@main
(f9fdeabc55e9): <
https://commits.webkit.org/313775@main
> Reviewed commits have been landed. Closing PR #63735 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug