Bounding box does not account for skinning transforms https://bugs.webkit.org/show_bug.cgi?id=313476 rdar://174193414

Reviewed by Etienne Segonzac.

In computing the bounding box of a mesh, we considered the instance
transform but failed to consider the skinning transform. Correct this
by taking that transform into account.

Also fix constantly recomputing bounding boxes of skinned meshes
which is not compliant with the visionOS implementation.

* Source/WebKit/GPUProcess/graphics/Model/ModelBridge.swift:
(WKBridgeSkinningData.rootJointIndices):
* Source/WebKit/GPUProcess/graphics/Model/ModelTypes.h:
* Source/WebKit/GPUProcess/graphics/Model/USDModel.swift:
(rootSkinMatrices(for:)):
(rootJointIndices(forMeshAt:in:)):
(rootJointIndices(from:)):
(updateMesh(_:)):
(USDModelLoader.processMeshUpdates(_:)):
* Source/WebKit/GPUProcess/graphics/Model/WebKitMesh.mm:
(WebModel::convert):
* Source/WebKit/Shared/Model.serialization.in:
* Source/WebKit/WebProcess/GPU/graphics/Model/RemoteMeshProxy.cpp:
(WebKit::computeMinAndMaxCorners):
(WebKit::RemoteMeshProxy::update):
* Source/WebKit/WebProcess/Model/ModelInlineConverters.h:
(WebKit::convert):

Canonical link: https://commits.webkit.org/313775@main